fixed broken refs in several sections

--- a/caseStudyWP/bib/refs.bib
+++ b/caseStudyWP/bib/refs.bib
@@ -289,6 +289,16 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\MR53M6VU\\DFO2021 WCVI Salmon Bulletin _WCVI_CN_forecast.pdf}
 }
 
+@techreport{dfoWestCoastVancouver2014,
+  title = {West {{Coast Vancouver Island Chinook Salmon Escapement Estimation}} and {{Stock Aggregation Procedures}}},
+  author = {DFO},
+  year = {2014},
+  number = {DFO Can. Sci. Advis. Sec. Sci. Advis. Rep. 2014/038},
+  pages = {7},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\QV4LXWPJ\\West Coast Vancouver Island Chinook Salmon Escapem.pdf}
+}
+
 @article{dfoWildSalmonPolicy2015,
   title = {Wild Salmon Policy Biological Status Assessment for Conservation Units of Interior {{Fraser River Coho Salmon}} ({{{\emph{Oncorhynchus}}}}{\emph{ Kisutch}})},
   author = {DFO},
@@ -471,7 +481,7 @@
   langid = {english}
 }
 
-@article{holtIndicatorsStatusBenchmarks2009,
+@article{holtIndicatorsStatusBenchmarks2009a,
   title = {Indicators of {{Status}} and {{Benchmarks}} for {{Conservation Units}} in {{Canada}}'s {{Wild Salmon Policy}}},
   author = {Holt, Carrie A and Cass, Alan and Holtby, Blair and Riddell, Brian},
   year = {2009},
@@ -493,12 +503,12 @@
   annotation = {OCLC: 1199014307}
 }
 
-@techreport{ifcrtinteriorfrasercohorecoveryteamConservationStrategyCoho2006,
+@techreport{ifcrtConservationStrategyCoho2006,
   title = {Conservation Strategy for {{Coho Salmon}}  ({{Oncorhynchus}} Kisutch), Interior {{Fraser River}} Populations},
-  author = {{IFCRT (Interior Fraser Coho Recovery Team)}},
+  author = {{IFCRT}},
   year = {2006},
   pages = {132},
-  institution = {{Fisheries and Oceans Canada}}
+  institution = {{Interior Fraser Coho Recovery Team, Fisheries and Oceans Canada}}
 }
 
 @techreport{iucnstandardsandpetitionscommitteeGuidelinesUsingIUCN2019a,
