--- a/guidelinesWP/01-chap1.Rmd
+++ b/guidelinesWP/01-chap1.Rmd
@@ -107,7 +107,7 @@ Following @withlerGeneticallyBasedTargets2018, we recommend including only popul
 For integrated-transition and integrated-wild populations, WSP assessments of status have generally removed the demographic influence of hatchery production from time-series of abundances when data on the proportion of hatchery- vs. natural-origin fish on the spawning grounds are available [e.g., from marking of hatchery-origin fish, @dfoWildSalmonPolicy2015]. Specifically, the contribution of hatchery-origin fish are removed from both the benchmark estimation and metric of stock status. For stock-recruitment based benchmarks, the contribution of hatchery-origin fish is removed from recruitment estimates but not escapement, as it is assumed that these fish reproduce successfully in the wild and contribute to natural production. This way the spawner-recruitment relationship represents the production derived from spawners in the natural environment. For the current metric of stock status, the contribution of hatchery-origin fish is removed from spawner time-series to remove the influence of variability in annual production from hatcheries on current status [@dfoWildSalmonPolicy2015].
 
 
-In some cases where hatchery-origin fish are not marked, data on the proportion of hatchery-origin fish are not available. In these cases, WSP assessments generally rely on total spawner abundances including hatchery contribution, as long as spawner abundances are believed to be at east predominantly hatchery origin (e.g., PNI $>$ 0.5)[e.g., Southern BC Chinook Salmon, @dfoIntegratedBiologicalStatus2016]. In these cases, there may be risks that current status reflects hatchery production which masks changes in natural production. These risks are partly mediated but not dismissed by removing populations that are dominated by hatchery-origin fish from assessments.
+In some cases where hatchery-origin fish are not marked, data on the proportion of hatchery-origin fish are not available. In these cases, WSP assessments generally rely on total spawner abundances including hatchery contribution, as long as spawner abundances are believed to be at east predominantly hatchery origin (e.g., PNI $\geqslant$ 0.5)[e.g., Southern BC Chinook Salmon, @dfoIntegratedBiologicalStatus2016]. In these cases, there may be risks that current status reflects hatchery production which masks changes in natural production. These risks are partly mediated but not dismissed by removing populations that are dominated by hatchery-origin fish from assessments.
 
 In addition, some populations without hatcheries may be influenced by straying from hatcheries from neigbhouring populations ('out-of-basin' strays). In this case, a very large fraction of fish may be wild, however, if straying continues to increase over long time periods, gene flow modelling shows that that the genetic influence of hatcheries will increase as well [@withlerGeneticallyBasedTargets2018]. The impact of these strays is generally not included in assessments in part because of the absence of visible marking on hatchery fish or genetic studies to determine their influence, and so out-of-basin strays are included in total abundances. Studies evaluating the extent of straying for Chinook Salmon for the West Coast of Vancouver Island are on-going (W. Luedke pers. comm.)
 
