--- a/caseStudyWP/04-chap4.Rmd
+++ b/caseStudyWP/04-chap4.Rmd
@@ -7,10 +7,10 @@ output:
 # CASE STUDY 2: WEST COAST VANCOUVER ISLAND CHINOOK{#WCVIchinookChapter}
 ## CONTEXT
 
-The West Coast of Vancouver Island (WCVI) Chinook SMU is comprised of 3 CUs [@holtbyConservationUnitsPacific2007], 7 large inlets (or sounds), and 20 indicators stocks, which are stocks with relatively complete time-series and consistent observation methodology (Figure \@ref(fig:chinook-map); Table \@ref(tab:chinook-Overview), @riddellReview2001Chinook2002). Hatcheries produce a relatively large component of the total production in many of these stocks, where they help achieve harvest, conservation and assessment objectives. However, they are also considered a risk factor for the long-term sustainability of CUs because they can also reduce wild genetic diversity[@withlerGeneticallyBasedTargets2018]. As described in Holt *et al.* (in review), only indicator stocks without significant enhancement, i.e.,  stocks with Proportionate Natural Influence, PNI, values $\geqslant$ 0.5 were included. Most fish are natural origin in these populations, though the of 'wild' fish, second generation natural-origin fish may be in the minority [@withlerGeneticallyBasedTargets2018]. 
+The West Coast of Vancouver Island (WCVI) Chinook SMU is comprised of 3 CUs [@holtbyConservationUnitsPacific2007], 7 large inlets (or sounds), and 20 indicators stocks, which are stocks with relatively complete time-series and consistent observation methodology (Figure \@ref(fig:chinook-map); Table \@ref(tab:chinook-Overview), @riddellReview2001Chinook2002). Hatcheries produce a relatively large component of the total production in many of these stocks, where they help achieve harvest, conservation and assessment objectives. However, they are also considered a risk factor for the long-term sustainability of CUs because they can also reduce wild genetic diversity[@withlerGeneticallyBasedTargets2018]. As described in Holt et al. (in review), only indicator stocks without significant enhancement, i.e.,  stocks with Proportionate Natural Influence, PNI, values $\geqslant$ 0.5 were included. Most fish are natural origin in these populations, though the of 'wild' fish, second generation natural-origin fish may be in the minority [@withlerGeneticallyBasedTargets2018]. 
 
 
-```{r chinook-map, fig.cap="Map of the WCVI Chinook SMU, component CUs (coloured red, blue, and yellow), and inlets (labelled in black- NAMES TO BE REVISED).", warning=FALSE, echo=FALSE, fig.align="center"}
+```{r chinook-map, fig.cap="Map of the WCVI Chinook SMU, component CUs (coloured red, blue, and yellow), and inlets (labelled in black).", warning=FALSE, echo=FALSE, fig.align="center"}
 knitr::include_graphics("figure/chinook-map.png")
 ```
 
@@ -66,7 +66,7 @@ This SMU was included as a case study to demonstrate the development of LRPs und
 Most Chinook in this SMU are 'ocean type', entering the ocean 1-3 months after emergence from spawning gravel [@dfoAssessmentWestCoast2012a]. 'Stream type' fish, those that stay in the river for one year after emergence, are rare. After entering the ocean, WCVI Chinook migrate into northern BC and southeast Alaska waters to rear for 2 to 7 years, returning to spawn predominantly at ages 4 and 5 [@dfoAssessmentWestCoast2012a].
 
 
-We considered the 4 criteria identified in Holt *et al.* (in review) to evaluate if status of any one CU within this SMU could be inferred from the remaining CUs. Several dominant threats are similar across the 3 WCVI CUs. Large-scale hatcheries operating within all three CUs have resulted in genetic risks from introgression [@cosewicCOSEWICAssessmentStatus2020]. Also, straying from hatchery-influenced populations likely compromises the genetic composition of spawners across WCVI.  Landslides and sedimentation from forestry impact spawning habitat across WCVI <!--CH Q: Is this true for NWVI too?-->. However, unique to West Vancouver Island-South is the relatively large number of aquaculture facilities for Atlantic salmon in nearshore habitat used by Chinook Salmon, which poses a threat to this CU [@cosewicCOSEWICAssessmentStatus2020]. Also unique to West Vancouver Island-Nootka and Kyuquot are threats from tourism (~100 lodges located in important areas of Chinook Salmon rearing) and industrial effluents from pulp mills [@cosewicCOSEWICAssessmentStatus2020].
+We considered the 4 criteria identified in Holt et al. (in review) to evaluate if status of any one CU within this SMU could be inferred from the remaining CUs. Several dominant threats are similar across the 3 WCVI CUs. Large-scale hatcheries operating within all three CUs have resulted in genetic risks from introgression [@cosewicCOSEWICAssessmentStatus2020]. Also, straying from hatchery-influenced populations likely compromises the genetic composition of spawners across WCVI.  Landslides and sedimentation from forestry impact spawning habitat across WCVI. However, unique to West Vancouver Island-South is the relatively large number of aquaculture facilities for Atlantic salmon in nearshore habitat used by Chinook Salmon, which poses a threat to this CU [@cosewicCOSEWICAssessmentStatus2020]. Also unique to West Vancouver Island-Nootka and Kyuquot are threats from tourism (~100 lodges located in important areas of Chinook Salmon rearing) and industrial effluents from pulp mills [@cosewicCOSEWICAssessmentStatus2020].
 
 All three CUs likely experience similar freshwater environmental conditions being part of the same Freshwater Adaptive Zone, West Vancouver Island, characterized by very high annual water flow, relatively warm temperatures, low wetland influence, and low alpine cold water and glacial influences [@holtbyConservationUnitsPacific2007]. Spawning habitats for all three CUs are primarily within the Coastal Western Hemlock biogeoclimatic zone. However, the marine environment experienced by juveniles from the West Vancouver Island-Nootka and Kyuoquot and West Vancouver Island-South CUs differs from that of the West Vancouver Island North CU to the north [@holtbyConservationUnitsPacific2007]. The two southern CUs are influenced by the Juan de Fuca Strait which determines food chain productivity in nearshore environment. For the northern CU,  nearshore marine environment is influenced primarily by the northward flowing coastal current in the North Pacific ocean [@cosewicCOSEWICAssessmentStatus2020].
  
@@ -88,21 +88,16 @@ Previous assessments of Chinook Salmon stocks, including WCVI, have used 'habita
 In November 2020, @cosewicCOSEWICAssessmentStatus2020 designated the West Vancouver Island-South and West Vancouver Island-Nootka & Kyuquot at Threatened, and West Vancouver Island-North as data deficient. Threatened statuses were determined primarily from genetic risks of hatcheries enhancement and habitat threats from forestry. West Vancouver Island-North was designated data deficient because it contains only one indicator stock.
 
 
-<!-- CH: move to Appendix: Because the stock-recruitment data for the meta-analysis used in @parken_2006 were not available, we relied on a similar data set used by @liermann_2010.  
-CW: I can write up the watershed model appendix, if that is not already done elsewhere? 
-CH: I'd love your help, but I think we won't get to it until Jan/Feb, so timing isn't good for you.
--->
-
 
 ## DATA
 
 ### Spatial scale
 
-Under Canada's Wild Salmon Policy, CUs are identified at a spatial scale that allows for long-term sustainability of the species [@holtbyConservationUnitsPacific2007]. For WCVI Chinook, inlets nested within CUs are another important spatial scale of diversity for sustainability given geographic separation of spawning habitats among inlets and limited straying among inlets (D. McHugh pers. comm. DFO South Coast Stock Assessment). We used a hybrid approach that preserved CU-scale diversity, while also considering inlet-scale diversity. Specifically, LRPs were developed to preserve inlet-scale diversity within CUs. <!--KH: These last two sentences seem similar; could they be combined to say "We used a hybrid approach in which LRPs were developed to preserve inlet-scale diversity within CUs"-->However, only 5 of the 7 inlets on the west coast of Vancouver Island contained indicators stock without significant hatchery influence. <!-- KH: May want to emphasize that both of the missing inlets are from the WCVI - south CU, and that they are the sourthern-most inlets in SMU. For example, could replace the next sentence with something like "Both Nitnat and San Juan inlets, which are the two most southern inlets within the WCVI-South CU, have large-scale hatcheries and infrequent monitoring of sites with natural spawning. -->  The lack of indicators without significant hatchery influence for inlets Nitinat and San Juan is due to large-scale hatcheries and infrequent monitoring of sites with natural spawning.  Because the remaining 5 inlets with significant natural spawning are nested within the 3 WCVI Chinook CUs, preserving this inlet-scale biodiversity will also preserve CU-scale biodiversity required under the Wild Salmon Policy. Future analyses could limit LRP estimation to the scale of CUs or extend it to include all 7 inlets with additional natural indicators for Nitinat and San Juan, if they are developed. 
+Under Canada's Wild Salmon Policy, CUs are identified at a spatial scale that allows for long-term sustainability of the species [@holtbyConservationUnitsPacific2007]. For WCVI Chinook, inlets nested within CUs are another important spatial scale of diversity for sustainability given geographic separation of spawning habitats among inlets and limited straying among inlets (D. McHugh pers. comm. DFO South Coast Stock Assessment). We used a hybrid approach in which LRPs were developed to preserve inlet-scale diversity within CUs. However, only 5 of the 7 inlets on the west coast of Vancouver Island contained indicators stock without significant hatchery influence. Both Nitnat and San Juan inlets, which are the two most southern inlets within the WCVI-South CU, have large-scale hatcheries and infrequent monitoring of sites with natural spawning. These two inlets lack indicators without significant hatchery influence.  Because the remaining 5 inlets with significant natural spawning are nested within the 3 WCVI Chinook CUs, preserving this inlet-scale biodiversity will also preserve CU-scale biodiversity required under the Wild Salmon Policy. Future analyses could limit LRP estimation to the scale of CUs or extend it to include all 7 inlets with additional natural indicators for Nitinat and San Juan, if they are developed. 
 
 ### Watershed Areas
 
-To derive habitat-based benchmarks, watershed areas were updated for WCVI Chinook using methods described in @parkenHabitatbasedMethodsEstimate2006 by identifying 3rd order watershed areas that contain spawning habitat and omitting areas above obstacles to fish passage from the [Provincial Obstacles to Fish Passage database](https://catalogue.data.gov.bc.ca/dataset/provincial-obstacles-to-fish-passage). Only watershed areas for indicator stocks were included in the current analysis, and these watershed areas were then summed within inlets (Table \@ref(tab:chinook-WA)). As a result, inlet-level benchmarks presented in this case study are on a relative scale; they only represent the abundance of select indicator streams. In future analyses, watershed areas of all known spawning populations could be included (omitting areas above obstacles to fish passage) to derive habitat-based benchmarks on an absolute abundance scale. These benchmarks could be compared against total abundances to each inlet. This approach was not used as in this case study because <!--of--> large uncertainties in abundances of non-indicator stocks <!--KH: precluded the development or reliable estimates of total abundance-->.
+To derive habitat-based benchmarks, watershed areas were updated for WCVI Chinook using methods described in @parkenHabitatbasedMethodsEstimate2006 by identifying 3rd order watershed areas that contain spawning habitat and omitting areas above obstacles to fish passage from the [Provincial Obstacles to Fish Passage database](https://catalogue.data.gov.bc.ca/dataset/provincial-obstacles-to-fish-passage). Only watershed areas for indicator stocks were included in the current analysis, and these watershed areas were then summed within inlets (Table \@ref(tab:chinook-WA)). As a result, inlet-level benchmarks presented in this case study are on a relative scale; they only represent the abundance of select indicator streams. In future analyses, watershed areas of all known spawning populations could be included (omitting areas above obstacles to fish passage) to derive habitat-based benchmarks on an absolute abundance scale. These benchmarks could be compared against total abundances to each inlet. This approach was not used as in this case study because of large uncertainties in abundances of non-indicator stocks that precluded the development of reliable estimates of total abundance.
 
 
 ```{r chinook-WA, warning=FALSE, echo=FALSE}
@@ -128,26 +123,23 @@ csasdown::csas_table(dat, booktabs = T, caption = "Sum of watershed areas for in
 ```
 
 ### Spawner Abundances
-Spawner abundances were provided for 20 WCVI indicators stocks, (D. Dosbon and D. McHugh pers .comm.; Table \@ref(tab:chinook-Overview); Figure \@ref(fig:chinook-IndTimeSeries)). These time-series are compiled annually by DFO <!--Southcoast? -->Area Staff for local and international assessment and management (e.g., @dfoWCVISalmonBulletin2021). Missing values were not infilled <!--KH: consider adding ", which limited the estimation of historical SMU status to years with complete data series"   Also, could consider including a stament about the frequency of missing values.  i.e., were there 3, 4, 5 years for which data was missing from one or more natural indicators?-->. In future work, infilled time-series of indicators within inlets (or CUs) could be developed to extend the available time-series. <!--CH: checking these next 2 sentences with Jessy and Diana M.--> Spawner abundances for indicators stocks were estimated based on a combination of enumeration at fishways, mark recapture experiments, and stream walks, which range in accuracy and precision. Although indicator stocks are chosen in part based on the consistency of the methods applied, spawner estimates from visual surveys is a source of uncertainty for this SMU.
-<!--CH: not sure Which estimation methods are typically used? Area under the curve, peak counts, etc.? -->
+Spawner abundances were provided for 20 WCVI indicators stocks, (D. Dosbon and D. McHugh pers .comm.; Table \@ref(tab:chinook-Overview); Figure \@ref(fig:chinook-IndTimeSeries)). These time-series are compiled annually by DFO Southcoast Area Staff for local and international assessment and management (e.g., @dfoWCVISalmonBulletin2021). Missing values were not infilled, which limited the estimation of historical SMU status to years with complete data series.  Although the time-series of some indicators stocks extends back to 1953, others began as late as 1995 limiting our analyses to these recent time-series. <!--CH: I haven't added the numbers of missing values, but they can be seen in the historical status plot -->In future work, infilled time-series of indicators within inlets (or CUs) could be developed to extend the available time-series. Spawner abundances for indicators stocks were estimated based on a combination of snorkel,  boat or aerial surveys, bank walks, and fence counts, which range in accuracy and precision (see @dfoWestCoastVancouver2014 for a summary of monitoring and assessment methods). Although indicator stocks are chosen in part based on the consistency of the methods applied, spawner estimates from visual surveys is a source of uncertainty for this SMU. Abundances are usually estimated using Area-Under-the-Curve (AUC) or associated maximum likelihood methods. For stocks that are not surveyed continuously over the spawning season, abundances are estimated using peak counts or a combination of observations from multiple surveys, contributing additional uncertainties to abundance estimates. 
 
 
 
-```{r chinook-IndTimeSeries, fig.cap="Time-series of spawner abundances by indicator stock, in units of 1000s. Dark blue time-series are indicator stocks with Proportionate Natural Index (PNI) values <= 0.5; light blue time-series are indicator stocks with PNI < 0.5, i.e., are highly enhanced. Prelminary PNI values are provided in the top right corner of each panel where they are available",  warning=FALSE, echo=FALSE, fig.align="center"}
+```{r chinook-IndTimeSeries, fig.cap="Time-series of spawner abundances by indicator stock, in units of 1000s. Dark blue time-series are indicator stocks where most production is from natural spawning and Proportionate Natural Index (PNI) values are generally >= 0.5; light blue time-series are indicator stocks where hatchery producion is dominant, where PNI values are generally < 0.5. Prelminary PNI values are provided in the top right corner of each panel where they are available. See Section on PNI values below for more details.",  warning=FALSE, echo=FALSE, fig.align="center"}
 
 knitr::include_graphics("figure/chinook-IndicatorTimeSeries.png")
 # from Watershed-Area model repository
 ```
 
 
-<!--KH: Dark blue in the above figure caption should be PNI values >= 0.5, right? -->
-
 ### Proportionate Natural Influence, PNI
 
-Proportionate Natural Influence, PNI, is a metric of the genetic risk of hatcheries on natural populations, with values < 0.5 indicating integrated-hatchery populations, where most fish are hatchery origin, values  $\geqslant$ 0.5 and < 0.72 indicating integrated-transition populations where natural-origin fish predominate, and values $\geqslant$ 0.72 indicating integrated-wild populations, where most fish are considered 'wild' under the WSP with parents who were born in the natural environment [@withlerGeneticallyBasedTargets2018]. <!--KH: What do you think about moving the above PNI description to an earlier spot in the paper? - since PNI has been mentioned a few times by now in the paper.It could be added to chapter 2, where PNI is first briefly mentioned in the last paragraph of the overview section (starting around line 28).  I also mention PNI, and some of the Withler thresholds in 'Context' section for the coho chapter, but I think this would be better placed in chapter 2.-->PNI values for 14 WCVI indicator stocks were provided to DFO South Coast Stock Assessment by DFO's Salmonid Enhancement Program (J. Bokvist, pers. comm. DFO South Coast Salmon Assessment). Stocks were considered significantly enhanced and excluded from our analyses if average PNI values over the available time-series were < 0.5. Thermal marking was used to identify the proportion of hatchery-origin spawners on the spawning grounds to derive PNI values. When data on thermal marking were not available, coded-wire tags (CWTs) were used to identify hatchery-origin spawners. Although Gold River had PNI values > 0.5 (0.52), most of the unmarked spawners are thought to be second generation (or descendants of) hatchery-origin fish from the Robertson Creek hatchery, was excluded from our analyses. Also, although PNI of Artlish was marginally <0.5 (0.46), PNI estimates were only available for one year (2015) using CWTs, which was deemed to be unrepresentative of this stock which is relatively unenhanced. Five of the remaining 6 indicator stocks without PNI data are not thought to be significantly enhanced, Cayeghle, Kaouk, Megin, Moyeha and Tasish (D. McHugh, pers. comm., DFO South Coast Stock Assessment). One indicator stock without PNI data, Tranquil, was considered significantly enhanced and was grouped with the PNI <0.5 stocks (D. McHugh, pers. comm., DFO South Coast Stock Assessment). Guidelines and methods for estimating PNI values are currently being documented by DFO's Salmonid Enhancement Program. Uncertainties in PNI values stem from low sample sizes to estimate proportion hatchery-origin spawners, large uncertainties from CWT estimates of hatchery-origin spawners, and assumptions required to estimate proportion natural-origin brood stock. 
+To evaluate the impact of hatchery production, Proportionate Natural Influence, PNI values for 14 WCVI indicator stocks were provided to DFO South Coast Stock Assessment by DFO's Salmonid Enhancement Program (J. Bokvist, pers. comm. DFO South Coast Salmon Assessment). Stocks were considered significantly enhanced and excluded from our analyses if average PNI values over the available time-series were < 0.5. Thermal marking was used to identify the proportion of hatchery-origin spawners on the spawning grounds to derive PNI values. When data on thermal marking were not available, coded-wire tags (CWTs) were used to identify hatchery-origin spawners. Although Gold River had PNI values > 0.5 (0.52), most of the unmarked spawners are thought to be second generation (or descendants of) hatchery-origin fish from the Robertson Creek hatchery, was excluded from our analyses. Also, although PNI of Artlish was marginally <0.5 (0.46), PNI estimates were only available for one year (2015) using CWTs, which was deemed to be unrepresentative of this stock which is relatively unenhanced. Five of the remaining 6 indicator stocks without PNI data are not thought to be significantly enhanced, Cayeghle, Kaouk, Megin, Moyeha and Tasish (D. McHugh, pers. comm., DFO South Coast Stock Assessment). One indicator stock without PNI data, Tranquil, was considered significantly enhanced and was grouped with the PNI <0.5 stocks (D. McHugh, pers. comm., DFO South Coast Stock Assessment). Guidelines and methods for estimating PNI values are currently being documented by DFO's Salmonid Enhancement Program. Uncertainties in PNI values stem from low sample sizes to estimate proportion hatchery-origin spawners, large uncertainties from CWT estimates of hatchery-origin spawners, and assumptions required to estimate proportion natural-origin brood stock. 
 
 
-Because current and historical times-series of the proportion of hatchery-origin spawners were not consistently available for stocks with PNI $\geqslant$ 0.5, total spawner abundances <!--KH: add "(i.e., combined natural- and hatchery-origin spawners)"--> were used in the assessment of CU and aggregate SMU level statuses. This may results in overly optimistic assessments of status relative to if hatchery-origin fish were excluded (as in Interior Fraser River Coho case study).  We recommend the collection of data to estimate the contribution of hatchery-origin spawners to total production for these indicator stocks. The inclusion of hatchery-origin fish in estimates of status is a key source of uncertainty for this SMU.
+Because current and historical times-series of the proportion of hatchery-origin spawners were not consistently available for stocks with PNI $\geqslant$ 0.5, total spawner abundances (i.e., combined natural- and hatchery-origin spawners) were used in the assessment of CU and aggregate SMU level statuses. This may results in overly optimistic assessments of status relative to if hatchery-origin fish were excluded (as in Interior Fraser River Coho case study).  We recommend the collection of data to estimate the contribution of hatchery-origin spawners to total production for these indicator stocks. The inclusion of hatchery-origin fish in estimates of status is a key source of uncertainty for this SMU.
 
 <!--KH: To think about for guidelines paper: are we recommending average PNI > 0.5 over the available time series as a threshold for including in LRP calculations?  If so, do we have advice about how to deal with trends in PNI over time? When looking at the Interior Fraser Chinook data way back when, I seem to recall that PNI was variable over time for several of those streams.  
 
@@ -160,7 +152,7 @@ CH: my initial thinking would be remove time-periods where PNI is very high from
 <!--CH: Mention caveat about northern CU/inlet being DD possibly?-->
 
 
-Inlet status was derived by applying the multidimensional approach used within the Pacific Salmon Status Scanner to individual inlets (Pestal *et al.*, in prep). We found that the status using this method was equivalent to status on a single metric, abundance relative to a lower benchmark S~gen~ for all inlets, because abundances were only available on a relative scale (only indicator stocks are monitored consistently); absolute numbers were not available (as shown in Figure \@ref(fig:decision-tree)). Here we present analyses and results for <!-- CU --> status on that single metric, though it also represents multidimensional status in this case. <!--KH: This last sentence seems to contradict this first sentence of this paragraph, in which you say that inlet status was derived using the Pacific Salmon Scanner.i.e., If the Salmon Scanner was the method used, why wouldn't you present it? Perhaps you could say that two methods of estimating CU status were considered, but that because they are the same, you only present a single set of results in this section. You could then go on to note that Holt et al. (in review) recommends using the Salmon Scanner Tool. This is also more in-line with how the two options (single metric vs. scanner tool) are presented for Coho and Chum. -->
+Inlet status was derived by applying the multidimensional approach used within the Pacific Salmon Status Scanner to individual inlets (Pestal et al., in prep). We found that the status using this method was equivalent to status on a single metric, abundance relative to a lower benchmark S~gen~ for all inlets, because abundances were only available on a relative scale (only indicator stocks are monitored consistently); absolute numbers were not available (as shown in Figure \@ref(fig:decision-tree)). Because the results were the same, we present a single set of analyses and results, labeled as the single metric (which also represents multidimensional status in this case). Holt et al. (in review) recommends applying the Salmon SCanner to derive CU-level status.
 
 The lower benchmark on abundances applied under the WSP, S~gen~, the spawner abundances required to achieve S~MSY~ within one generation without fishing under equilibrium conditions, was derived by optimizing the Ricker equation with recruitment set to S~MSY~ (equation \@ref(eq:Sgen) repeated again here for transparency):
 
