--- a/caseStudyWP/bib/refs.bib
+++ b/caseStudyWP/bib/refs.bib
@@ -876,6 +876,12 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\GQKHXCDD\\Schnute and Richards - 1995 - The influence of error on population estimates fro.pdf;C\:\\Users\\HoltC\\Zotero\\storage\\I7CIKUKN\\f95-800.html}
 }
 
+@misc{standevelopmentteamRStanInterfaceStan2020,
+  title = {{{RStan}}: The {{R}} Interface to {{Stan}}. {{R}} Package Version 2.21.2. {{http://mc-stan.org/.}}},
+  author = {Stan Development Team,},
+  year = {2020}
+}
+
 @techreport{vanwillInnerSouthCoast2014,
   title = {Inner {{South Coast Chum Stock Reconstructions}} (1953-2013)},
   author = {Van Will, Pieter},
