added refs to App. figs

--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -385,7 +385,7 @@ knitr::include_graphics("figure/coho-StatusByNCUs-SPopAbundThreshST-50.png")
 
 Forward projections of each of the five CUs with the Interior Fraser Coho SMU were done using the `samSim` modelling tool (Appendix \@ref(app:samsim-appendix)). Finer-scale projections at the scale of sub-populations were not possible as spawner-recruit data series were not available at this scale. As a result, projection-based LRPs using the IFCRT recovery target was not possible; we were restricted to looking at CU-level status estimates based on S~gen~. Parameters characterizing CU-level population dynamics, marine survival rates, and exploitation rates were derived directly from data sets described in Section \@ref(cohoData). Base case parameters and alternative parameter values tested in sensitivity analyses are provided in Table \@ref(tab:coho-BaseProjectPars). Additional details on key model parameterizations and sensitivity analyses are also described in text below.  
 
-Projection model outputs were used to estimate projection-based LRPs using the methods described on Section \@ref(projectedMethods). Forward projections were run for 30 years over 20,000 simulation trials, with projections initialized using spawner abundances from the most recent four return years, 2016 - 2020.  The high number of simulation trials was required to stabilize LRP estimates given the binning of aggregate escapement in 200-fish intervals to identify LRPs based on probability thresholds.  Simulated trajectories were close to stable after an initial adjustment to near equilibrium conditions. <!--CH suggested rewording: "Simulated trajectories were near equilibrium after 4 years of initialization during which trajectories depended primarily on the historical time-series. "-->
+Projection model outputs were used to estimate projection-based LRPs using the methods described on Section \@ref(projectedMethods). Forward projections were run for 30 years over 20,000 simulation trials, with projections initialized using spawner abundances from the most recent four return years, 2016 - 2020.  The high number of simulation trials was required to stabilize LRP estimates given the binning of aggregate escapement in 200-fish intervals to identify LRPs based on probability thresholds.  Simulated trajectories were close to stable after an initial adjustment to near equilibrium conditions (Figs. \@ref(coho-CUProjections-Ricker) and \@ref(coho-CUProjections-Ricker-priorCap)). <!--CH suggested rewording: "Simulated trajectories were near equilibrium after 4 years of initialization during which trajectories depended primarily on the historical time-series. "-->
 <!--KH: Carrie - can you please confirm that the wording in the last sentence is consistent with what we discussed including here?  I have also added a note to the discussion section about looking for future instabilities that affect LRP estimates-->
 
 
