added ref for ensemble model weighting

--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -605,7 +605,7 @@ Most methods evaluated for the Interior Fraser Coho case study relied on the eva
 
 We considered alternative Ricker models for Interior Fraser Coho  to represent different assumptions regarding carrying capacity, which in turn affected productivity. This approach has also been used in previous analyses for this SMU. @arbeiderInteriorFraserCoho2020 used a model averaging approach with three SR models equally weighted when assessing recovery potential for the Interior Fraser Coho SMU (the base Ricker and Ricker_priorCap models we used, as well as a third depensatory mortality version that we did not consider). @kormanEvaluationFrameworkAssessing2019 also considered multiple Ricker model formulations when estimating reference points for the Interior Fraser Coho SMU; however, they opted to focus on results for the base Ricker model instead of using model averaging approaches. 
 
-One approach to accounting for uncertainty in underlying model structure is to integrate estimates of LRP status over those alternative structures.  We demonstrate one approach when using projection-based estimates of aggregate abundance-based LRPs, in which we combine projections under each SR model scenario before calculating the LRP. This approach is basically a model averaging approach in which both scenarios are equally weighted.  However, other methods of assigning weights among model are possible. <!-- For example .... (TO DO: reference model selection / averaging papers from Carrie).  --> In other cases, such as for proportion-based LRPs, uncertainty in model structure may require integration at earlier stages (i.e., when estimating biological benchmarks) or based on expert opinion.
+One approach to accounting for uncertainty in underlying model structure is to integrate estimates of LRP status over those alternative structures.  We demonstrate one approach when using projection-based estimates of aggregate abundance-based LRPs, in which we combine projections under each SR model scenario before calculating the LRP. This approach is basically a model averaging approach in which both scenarios are equally weighted.  However, other methods of assigning weights among model are possible, such as weighting based on prediction skill [@kellValidationStockAssessment2021]. In other cases, such as for proportion-based LRPs, uncertainty in model structure may require integration at earlier stages (i.e., when estimating biological benchmarks) or based on expert opinion.
 
 ### Logisic Regression-Based LRPs
 
