--- a/guidelinesWP/05-chap5.Rmd
+++ b/guidelinesWP/05-chap5.Rmd
@@ -269,16 +269,16 @@ LRPs based on logistic regressions may be appropriate when the following assumpt
 CH: you're probably right, but I'm unsure how much afew is, and wonder if some (possibly rare) case having one year might work..?
 -   -->
 
-- There is a significant positive relationship between aggregate abundances and log-odds of all component CUs being above their lower benchmark without influential outliers, as supported by model diagnostics described in Holt et al. (in review). This relationship tends to be strong and positive when pairwise correlations in spawner abundances are strong and positive among CUs. For example, for Interior Fraser Coho, goodness-of-fit diagnostics identified a significant relationship between aggregate abundances and log-odds of all component CUs being above their lower benchmarks (p<0.01) and the average pairwise spawner correlations among CUs was relatively high, 0.43. In contrast, for Inside South Coast Chum, the same goodness-of-fit diagnostic was not statistically significant (p=0.13) and average pairwise spawner correlations was relatively weak, 0.12.  <!--CH or Kendra: Check exact cor and p-values for IFR coho.-->
+- There is a significant positive relationship between aggregate abundances and log-odds of all component CUs being above their lower benchmark without influential outliers, as supported by model diagnostics described in Holt et al. (in review). This relationship tends to be strong and positive when pairwise correlations in spawner abundances are strong and positive among CUs. For example, for Interior Fraser Coho, goodness-of-fit diagnostics identified a significant relationship between aggregate abundances and log-odds of all component CUs being above their lower benchmarks (p<0.01) and the average pairwise spawner correlations among CUs was relatively high, 0.56. In contrast, for Inside South Coast Chum, the same goodness-of-fit diagnostic was not statistically significant (p=0.13) and average pairwise spawner correlations was relatively weak, 0.12.  <!--CH or Kendra: Check exact cor and p-values for IFR coho.--> <!--KH: I have updated to 0.56, which is the average among-CU pairwise correlation for natural-origin spawners. (Note - the value is very similar for total spawners) -->
 
-- Residuals for logistic regression model fit are independent (i.e., not temporally autocorrelated). <!--CH: "Or if autocorrelation is present in residuals, it is accounted for in the model with an AR(1) term."  Don't think we need it though-->
+- Residuals for logistic regression model fit are independent (i.e., not temporally autocorrelated). <!--CH: "Or if autocorrelation is present in residuals, it is accounted for in the model with an AR(1) term."  Don't think we need it though  KH: agree - not needed.-->
 
-- Environmental drivers and threats among CUs have remained stable over the available time-series, or have changed in the same way across CUs such that covariance in population dynamics among CUs is likely to have remained stable over time, and hence the relationship between aggregate abundances and log-odds of all CUs being above lower benchmarks is also likely to have remained stable. 
+- Environmental drivers and threats among CUs have remained stable over the available time-series, or have changed in the same way across CUs such that covariance in population dynamics among CUs is likely to have remained stable over time. As a result, the relationship between aggregate abundances and log-odds of all CUs being above lower benchmarks is also likely to have remained stable. 
 
-- CU-level population dynamics are not undergoing directional changes resuling in declines or increases in population dynamic parameters and benchmarks
+- CU-level population dynamics are not undergoing directional changes resulting in declines or increases in population dynamic parameters and benchmarks
 
 
-In preliminary analyses, we considered CU status based on multidimensional status from the Pacific Salmon Status Scanner, but have chosen to focus on the single metric approach for several reasons. First, the Salmon Scanner includes status on smoothed abundance data (running generational geometric mean) relative to abundance-based benchmarks, and therefore the status in one year depends on the status in the previous year. Autocorrelation violates the assumption of independence of observations required in the logistic regression. Although logistic regressions can be revised to account for autocorrelated residuals, the available degrees of freedom are often insufficient given the relatively short time-series of CUs <!--CU?-->assessments. <!--CH remove: "and changes in environmental conditions which sometimes precludes including older data."--> <!--CH: also sometimes skew in data points towards most years with all CUs above lower benchmarks which limits power of LR--> In addition, the Salmon Scanner includes metrics on short- and long-term trends in spawner abundances which are less directly related to, and may be completely unrelated to aggregate abundances. For CUs that rely on time trends for status assessments, aggregate abundance-based metrics are likely not appropriate (see below). <!--CH remove: "However, future analyses could explore the possibility of including CU statuses derived from the Salmon Scanner that rely primarily on abundance-based benchmarks with alternative logistic regression model forms that include autocorrelation.-->
+In preliminary analyses for the Interior Fraser Coho case study, we considered CU status based on multidimensional status from the Pacific Salmon Status Scanner, but have chosen to focus on the single metric approach for several reasons. First, the Salmon Scanner includes status on smoothed abundance data (running generational geometric mean) relative to abundance-based benchmarks, and therefore the status in one year depends on the status in the previous year. Autocorrelation violates the assumption of independence of observations required in the logistic regression. Although logistic regressions can be revised to account for autocorrelated residuals, the available degrees of freedom are often insufficient given the relatively short time-series of CUs <!--CU?-->assessments. <!--CH remove: "and changes in environmental conditions which sometimes precludes including older data."--> <!--CH: also sometimes skew in data points towards most years with all CUs above lower benchmarks which limits power of LR--> In addition, the Salmon Scanner includes metrics on short- and long-term trends in spawner abundances which are less directly related to, and may be completely unrelated to, aggregate abundances. For CUs that rely on time trends for status assessments, aggregate abundance-based metrics are likely not appropriate (see below). <!--CH remove: "However, future analyses could explore the possibility of including CU statuses derived from the Salmon Scanner that rely primarily on abundance-based benchmarks with alternative logistic regression model forms that include autocorrelation.-->
 
 
 LRPs based on logistic regressions may not be appropriate when:
@@ -312,7 +312,7 @@ Projection-based LRPs are derived from projections of CU-level population dynami
 Projection-based LRPs may be appropriate when:
 
 - CU-specific stock assessment models have been developed including parameterization of spawner-recruitment models, covariance in recruitment residuals among CUs, and ages-at-maturity. These models are peer reviewed and they represent current population dynamics.
-
+<!--KH: The above suggests that a peer-review of SR models is required, however, the next bullet goes in to say that it is not. Perhaps just remove the mention of peer-review in the first bullet? In general, any application of projection-based LRPs will need to go through peer-review, so having previoulsy peer-reviewed models is not needed  -->
 - Where peer-reviewed model parameters are not available or are no longer current, plausible bounds can be placed on uncertain parameters (e.g., productivity and capacity), including those that may have changed over the time-series to represent a best-estimate of current conditions. 
 
 - These CU-specific parameters are available for representative CUs within the SMU (as identified in step 3)
