Minor edits to guidelines paper

--- a/guidelinesWP/05-chap5.Rmd
+++ b/guidelinesWP/05-chap5.Rmd
@@ -21,9 +21,9 @@ Distribution is a commonly cited component of salmon viability and recovery [@mc
 We recommend that the decision on spatial scale of conservation for biological assessments be part of the peer-review process for CU and SMU assessments, and be based on biological principles of conservation and viability (e.g., as reviewed in @bradfordReviewBiologicalPrinciples2004 and @mcelhanyViableSalmonidPopulations2010). 
 
 
-Within this step, information on hatchery enhancement is used to identify populations where production is dominated by hatchery-origin fish.  Populations in which production is dominated by hatchery-origin fish (defined as PNI values < 0.5) should be excluded from analyses, while those that are dominated by natural-origin fish (PNI values are $\geqslant$ 0.5), should be  included in analyses.  These thresholds are based on guidelines established by [@withlerGeneticallyBasedTargets2018]. Further, where time-series of the proportion of marked fish on the spawning grounds are available and production is dominated by natural-origin fish, these proportions can be used to identify time-series of natural-origin recruitment for benchmark estimation and natural-origin spawners for status assessment against benchmarks. When the influence of hatchery production is removed in this way, the assessments are less sensitive to annual variation in hatchery practices.  
+Within this step, information on hatchery enhancement is used to identify populations where production is dominated by hatchery-origin fish.  Populations in which production is dominated by hatchery-origin fish (defined as PNI values < 0.5) should be excluded from analyses, while those that are dominated by natural-origin fish (PNI values are $\geqslant$ 0.5), should be included in analyses.  These thresholds are based on guidelines established by [@withlerGeneticallyBasedTargets2018]. Further, where time-series of the proportion of marked fish on the spawning grounds are available and production is dominated by natural-origin fish, these proportions can be used to identify time-series of natural-origin recruitment for benchmark estimation and natural-origin spawners for status assessment against benchmarks. When the influence of hatchery production is removed in this way, the assessments are less sensitive to annual variation in hatchery practices.  
 
-Infilling among streams or spawning sites for years with missing data is commonly used when compiling CU-level spawner abundance series. When infilled time series are being  LRPs and monitoring stock status relative to LRPs, consideration should be given to the scale at which infilling is being done at.  For example, if LRPs are based on maintaining CU-level (or inlet-level) diversity, infilling of missing data should not be based on escapements from outside of the CU (or inlet). In addition, hatchery enhancement should be carefully considered when infilling to avoid overestimating abundances when infilled numbers are based on sites that are artificially enhanced, to the extent possible. 
+Infilling among streams or spawning sites for years with missing data is commonly used when compiling CU-level spawner abundance series. When infilled time series are used to estimate LRPs and monitor stock status relative to LRPs, consideration should be given to the scale at which infilling is done at. For example, if LRPs are based on maintaining CU-level (or inlet-level) diversity, infilling of missing data should not be based on escapements from outside of the CU (or inlet). In addition, hatchery enhancement should be carefully considered when infilling to avoid overestimating abundances when infilled numbers are based on sites that are artificially enhanced, to the extent possible. 
 
 <!--KH:
 
@@ -34,6 +34,8 @@ Maybe adding a paragraph along the lines of:
 Infilling among streams or spawning sites for years with missing data is commonly used when compiling CU-level spawner abundance series. When infilled time series are being  LRPs and monitoring stock status relative to LRPs, consideration should be given to the scale at which infilling is being done at.  For example, if LRPs are based on maintaining CU-level (or inlet-level) diversity, infilling of missing data should not be based on escapements from outside of the CU (or inlet). Similarly, for CUs with moderate or high hatchery enhancement and / or straying among sites of hatchery fish, infilling should not be done among sites with varying levels of hatchery enhancement.  (KH: is this the best way to say this?  Are there other ways)      
 
 CH: added, rewording the last sentence. Does it look okay? I think avoiding strays is pretty hard, and may be  as much a genetic concern as a demographic numbers concern.
+
+KH: Looks good. I agree on strays.
 -->
 
 
@@ -236,7 +238,7 @@ $>$ 99\%  &  virtually certain that all CUs are above their lower benchmark\\
 
 
 
-Future applications of this Step 8 when setting LRPs may want to consider the relevance of probability thresholds for triggering LRPs described in DFO's Guidelines for the Implementation of Rebuilding Plans [@dfoScienceGuidelinesSupport2021].  These guidelines specify that, "unless otherwise defined in stock-specific precautionary approach frameworks, the LRP should be considered breached if the terminal year stock status indicator is estimated to be at or below the LRP with a greater than 50% probability or if the projected stock status indicator falls below the LRP with a greater than 50% probability under a zero catch scenario in a 1 year projection". While using a 50$% probability threshold of one or more CUs having red status is not directly analagous, in both cases the probability threshold chosen represents the probability of the stock avoiding serious harm. In our case studies, we provide logistic regression-based LRPs for the four probability thresholds described above, and focus sensitivity analyses on a 50% probability of all component CUs having status above red. This approach to delineating serious harm could be considered risk neutral, where risks may be accounted for directly and explicitly in harvest control rules that trade-off multiple objectives.    
+Future applications of this Step 8 when setting LRPs may want to consider the relevance of probability thresholds for triggering LRPs described in DFO's Guidelines for the Implementation of Rebuilding Plans [@dfoScienceGuidelinesSupport2021].  These guidelines specify that, "unless otherwise defined in stock-specific precautionary approach frameworks, the LRP should be considered breached if the terminal year stock status indicator is estimated to be at or below the LRP with a greater than 50% probability or if the projected stock status indicator falls below the LRP with a greater than 50% probability under a zero catch scenario in a 1 year projection". While using a 50$% probability threshold of one or more CUs having red status is not directly analogous, in both cases the probability threshold chosen represents the probability of the stock avoiding serious harm. In our case studies, we provide logistic regression-based LRPs for the four probability thresholds described above, and focus sensitivity analyses on a 50% probability of all component CUs having status above red. This approach to delineating serious harm could be considered risk neutral, where risks may be accounted for directly and explicitly in harvest control rules that trade-off multiple objectives.    
 
 
 
