--- a/guidelinesWP/02-chap2.Rmd
+++ b/guidelinesWP/02-chap2.Rmd
@@ -33,11 +33,12 @@ Where possible, a statistically integrated approach for estimating LRPs should b
 **Principle 5**. When selecting among multiple methods for determining LRPs, the choice should take into account risk<!-- CW: Risk or uncertainty? I think of risk as associated with FM and objectives. i.e. prob of achieving something. LW: Ya I'm not sure on risk vs. uncertainty here. I understand the intent of accounting for uncertainty in data/assumptions. At the same time when I think of risk I think of probability*magnitude of something happening, e.g., risk of climate change impacts on productivity. Uncertainty/assumptions in data and methods result in a risk of an LRP not being set above the point where serious harm occurs. Also, I think of setting an LRP at a certain probability of the SMU not reaching the point of serious harm (as mentioned in Ch 1 and in Kronlund et al. 2018). Is what we're trying to get at here that selection of methods should be precautionary, as in http://publications.gc.ca/collections/Collection/CP22-70-2003E.pdf ?  -->. Candidate methods for LRPs vary in how and the extent to which they account for uncertainty in underlying data, population dynamics (parameters and model structure), and derivation of CU-level statuses. These uncertainties create risks of LRPs providing a misleading threshold of serious harm. All else being equal, methods that do not rely on highly uncertain data or assumptions or that explicitly account for those uncertainties should be preferred. <!--CH: This principle supports use of ppn-based LRPs over aggregate abundance-based LRPs (b/c of uncertain assumptions in LR), with some justification for considering aggregate abundance-based LRPs that are statistically integrated so account of uncertainty in CU benchmarks. I have added to chapter on guidelines  -->
 
 
-**Principle 6**. Consider the use of alternative paradigms for developing LRPs. LRP estimates that converge when derived using different approaches, increases support that the methods capture underlying population dynamics despite differing assumptions and use of available data.  However, if LRPs cannot be estimated reliably using one method or approach,  then consider alternatives approaches based on different sets of assumptions and/or data. 
+**Principle 6**. Consider the use of alternative paradigms for developing LRPs. LRP estimates that converge when derived using different approaches, increases support that the methods capture underlying population dynamics despite differing assumptions and use of available data.  However, if LRPs cannot be estimated reliably using one method or approach, then consider alternatives approaches based on different sets of assumptions and/or data. 
 
 <!--KH: Can we add something to principle 6 to better explain how if differs from reliably estimated?  I was initially confused because principle 4 mentions additional reliability from coherence in LRP estimates from different analytical methods.  Upon thinking about it a bit more, I now think that principle 6 is really saying don't get stuck in one way of thinking (e.g., 0.4Bmsy for LRPs); consider alternative approaches (Brecover, Bo, time-varying models), whereas principle 4 is about data availability and quality, as well as choosing an appropriate estimation method.  Am I on the right track??? 
 LW: Also wondering if alternative paradigms could include Indigenous Knowledge/ Two-Eyed Seeing approaches? 
 CH: Kendra, yes that was what I was thinking, and tried to add some more text on this, but don't want to get into details here on specific methods or examples. Though I can if need be. Luke, I like this idea. And feel like that's not a paradigm we were equipped to explore in our TWG. I have that in future research as I think it should be explored .
+KH: Sounds good; your revision to the reliability principle about helps clarify.
 -->
 
 **Principle 7**.  In addition to principles derived for marine species in general (Principles 1-6), Pacific salmon LRPs should be consistent with the goals and objectives of the WSP. The WSP framework requires both the definition of biological units and an assessment of their status along biological metrics, with lower benchmarks used to represent the level of a metric that avoids risk of extinction. This approach is consistent with avoiding serious harm to the CU. Above the lower benchmarks (above red status), irreversible or slowly reversible impacts are avoided.  Ignoring CU-level status by focusing solely on SMU-level status can result in serial depletion (or loss) of weak component CUs within an SMU, resulting in a possibly misleading indication of serious harm and status. Therefore, to be consistent with the WSP, LRPs should consider status of component CUs.
